--- a/expressjs learn/Nodejs with mongodb/views/main.hbs
+++ b/expressjs learn/Nodejs with mongodb/views/main.hbs
@@ -30,7 +30,7 @@
      {{/if}}
     <ul>
         {{#each book}}
-        <li>{{this.title}} - {{this.author}} <a href="/edit_id={{this._id}}">Edit</a></li>
+        <li>{{this.title}} - {{this.author}} <a href="/?edit_id={{this._id}}">Edit</a></li>
         {{/each}}
     </ul>
 </body>
